--- a/index.html
+++ b/index.html
@@ -6,6 +6,25 @@
     <title>Project | Recipes</title>
 </head>
 <body>
+    <h1>Odin's Favourite Recipes</h1>
+    <ul>
+        <li>
+            <strong>
+                <a href="recipes/scrambled-eggs.html" target="_blank" rel="noopener noreferrer">
+                    Scrambled Eggs
+                </a> 
+            </strong>
+        </li>
+        
+        <li>
+            <strong>
+                <a href="recipes/basic-spaghetti.html" target="_blank" rel="noopener noreferrer" >
+                    Spaghetti
+                </a> 
+            </strong>
+        </li>
     
+    </ul>
+
 </body>
 </html>
