--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <ul>
         <li>
             <strong>
-                <a href="recipes/scrambled-eggs.html" target="_blank" rel="noopener noreferrer">
+                <a href="scrambled-eggs.html">
                     Scrambled Eggs
                 </a> 
             </strong>
@@ -18,7 +18,7 @@
         
         <li>
             <strong>
-                <a href="recipes/basic-spaghetti.html" target="_blank" rel="noopener noreferrer" >
+                <a href="basic-spaghetti.html">
                     Spaghetti
                 </a> 
             </strong>
