Added new html file and some adjustments details are in the readme file.

--- a/basic-spaghetti.html
+++ b/basic-spaghetti.html
@@ -6,9 +6,16 @@
     <title>Spaghetti</title>
 </head>
 <body>
-    <h1>How To Make A Basic Spaghetti</h1>
+    <h1> Spaghetti</h1>
     <img src="https://www.allrecipes.com/thmb/5Ia0lY9fFvvnr0mdjzibaDPTBFw=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/RM-232227-million-dollar-spaghetti-ddmfs-3x4-2595-9369a8f12fa14516bb494330cb7a4051.jpg" 
     height="350" alt="Spaghetti">
+    <h2>Description:</h2>
+    <strong>
+        <p>
+Spaghetti is a long, thin, solid, cylindrical pasta. It is a staple food of traditional Italian cuisine. Like other pasta, spaghetti is made of milled wheat, water, and sometimes enriched with vitamins and minerals.
+        </p>
+    </strong>
+    
     <h2>The İngredients</h2>
     <ul>
         <strong>
@@ -37,6 +44,8 @@
         <li>Enjoy!</li>
         </strong>
     </ol>
+   <strong>
     <a href="index.html">Check out our other recipes!</a>
+    </strong>
 </body>
 </html>
