--- a/index.html
+++ b/index.html
@@ -23,7 +23,13 @@
                 </a> 
             </strong>
         </li>
-    
+        <li>
+            <strong>
+                <a href="French-Fries.html">
+                    French Fries
+                </a> 
+            </strong>
+        </li>
     </ul>
 
 </body>
