--- a/scrambled-eggs.html
+++ b/scrambled-eggs.html
@@ -6,6 +6,11 @@
     <title>Scrambled Eggs</title>
 </head>
 <body>
-    <h1>How to make a Scrambled Egg</h1>
+    <h1>Scrambled Eggs</h1>
+    <img src="recipe-pics/scrambledeggs.jpg" width="500">
+    <h2>Description:</h2>
+    <strong>
+    <p>Scrambled eggs is a dish made from eggs (usually chicken eggs), where the whites and yolks have been stirred, whipped, or beaten together (typically with salt, butter or oil, and sometimes water or milk, or other ingredients), then heated so that the proteins denature and coagulate, and they form into "curds".</p>
+    </strong>
 </body>
 </html>
