finished the scrambled eggs html page details in the readme file

--- a/scrambled-eggs.html
+++ b/scrambled-eggs.html
@@ -11,6 +11,21 @@
     <h2>Description:</h2>
     <strong>
     <p>Scrambled eggs is a dish made from eggs (usually chicken eggs), where the whites and yolks have been stirred, whipped, or beaten together (typically with salt, butter or oil, and sometimes water or milk, or other ingredients), then heated so that the proteins denature and coagulate, and they form into "curds".</p>
-    </strong>
+    <h2>İngredients</h2>
+    <ul>
+        <li>3 large eggs.</li>
+        <li>1 teaspoon milk, plant milk, or water.</li>
+        <li>Extra-virgin olive oil or butter, for the pan.</li>
+        <li>Sea salt and freshly ground black pepper.</li>
+        <li>Chopped fresh chives, optional, for garnish.</li>
+    </ul>
+    <h2>How To Make</h2>
+    <ol>
+        <li>Whisk eggs, salt and pepper in small bowl. Melt butter in non-stick skillet over medium heat.</li>
+        <li>Pour in egg mixture and reduce heat to medium-low heat.</li>
+        <li>Cook until eggs are thickened and no visible liquid egg remains, but the eggs are not dry.</li>
+    </ol>
+    <a href="index.html">Check Out Our Other Recipes!</a>
+</strong>
 </body>
 </html>
