added new classes and div element to style in the future

--- a/index.html
+++ b/index.html
@@ -4,18 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project | Recipes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Odin's Favourite Recipes</h1>
-    <ul>
+    <h1 style="color: antiquewhite;">Odin's Favourite Recipes</h1>
+<ul>
+    <div class="eggs">
         <li>
             <strong>
-                <a href="scrambled-eggs.html">
+                <a href="eggs /scrambled-eggs.html" target="_blank" rel="noopener noreferrer">
                     Scrambled Eggs
                 </a> 
             </strong>
         </li>
-        
+    </div>   
+    <div>   
         <li>
             <strong>
                 <a href="basic-spaghetti.html">
@@ -23,6 +26,8 @@
                 </a> 
             </strong>
         </li>
+    </div>   
+    <div>  
         <li>
             <strong>
                 <a href="French-Fries.html">
@@ -30,7 +35,8 @@
                 </a> 
             </strong>
         </li>
+    </div>
     </ul>
 
 </body>
-</html>
+</html> 
